fix/z-index button

--- a/themes/antonija/assets/scss/styles.scss
+++ b/themes/antonija/assets/scss/styles.scss
@@ -96,7 +96,7 @@ body {
   .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     background: #000000af;
     width: 100%;
     height: 100vh;
